--- a/demo.html
+++ b/demo.html
@@ -18,7 +18,7 @@
 </html>
 <script>
     $(function(){
-        $("#container").organizationDesigner({readonly:false,height:"500px",width:"600px"});
+        $("#container").organizationDesigner({readonly:false,height:"500px",width:"100%"});
 
     })
 </script>
